# devs-image-processing-system

./: .gitignore  CMakeLists.txt  README.md
log_files/analyzer/: test_1_output.csv  test_2_output.csv
log_files/filter/: test_1_output.csv  test_2_output.csv
log_files/filterAnalyzer/: test_1_output.csv  test_2_output.csv
log_files/loader/: test_1_output.csv  test_2_output.csv
log_files/top_system/: test_1_output.csv  test_2_output.csv
main/: CMakeLists.txt  main.cpp
main/include/: analyzer.hpp  filter.hpp  filterAnalyzer.hpp  loader.hpp  top_system.hpp
main/include/devs_tests/: analyzer_tester.hpp  filterAnalyzer_tester.hpp  filter_tester.hpp  loader_tester.hpp  top_system_tester.hpp
main/test_runs/: main_analyzer_tester.cpp  main_filterAnalyzer_tester.cpp  main_filter_tester.cpp  main_loader_tester.cpp  main_top_system_tester.cpp
test_files/analyzer/test1/: analyzer_test.txt
test_files/analyzer/test2/: analyzer_test.txt
test_files/filter/test1/: filter_done_signal_test.txt  filter_input_test.txt
test_files/filter/test2/: filter_done_signal_test.txt
test_files/filterAnalyzer/test1/: filterAnalyzer_test.txt
test_files/filterAnalyzer/test2/: filterAnalyzer_test.txt
